--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Português · Native
+                            Portuguese · Native
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
