--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Web Site developer</h3>
-                            <div class="subheading mb-3"><a href="www.safehaven.com.br" style="color: rgb(0, 20, 202);">Safe Haven</a></div>
+                            <div class="subheading mb-3"><a target="blank" href="https://www.safehaven.com.br" style="color: rgb(0, 20, 202);">Safe Haven</a></div>
                             <p>I developed, and continue to develop, the entire web site from scratch. From the front-end to the back-end, using features such as PHP, Bootstrap, HTML 5, CSS 3, MySQL and JavaScript. It is a single page dynamic application. This is a personal project and a hobby, which I use to develop my skills as a software engineer.
-                                <br>Link to website: <a href="www.safehaven.com.br" style="color: rgb(0, 20, 202);">www.safehaven.com.br</a></p>
+                                <br>Link to website: <a target="blank" href="https://www.safehaven.com.br" style="color: rgb(0, 20, 202);">www.safehaven.com.br</a></p>
                         </div>
                         <div class="flex-shrink-0"><span style="color: rgb(0, 20, 202);">December 2022 - Present</span></div>
                     </div>
