--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Uninter - Universidade Internacional</h3>
+                            <h3 class="mb-0"><a class="link" target="blank" href="https://www.uninter.com/o-grupo/" style="color: rgb(0, 20, 202);">UNINTER</a> - Universidade Internacional</h3>
                             <div class="subheading mb-3">Bachelor of Software Engineering</div>
                             <div>currently studying</div>
                             <!-- <p>GPA: none</p> -->
